--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,11 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 .container {
   display: flex;
   flex-direction: row;
@@ -13,7 +5,7 @@ body {
   max-height: 100%;
 }
 
-.first-column {
+.first_column {
   margin: 50px 0px 0 20px;
   height: 400px;
   width: 300px;
@@ -24,19 +16,19 @@ body {
   border: 1px solid black;
 }
 
-.title-messanger {
+.title_messanger {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
 }
 
-.title-messanger-second {
+.title_messanger_second {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 30px;
   margin-top: 30px;
   margin-bottom: 10px;
 }
 
-.second-column {
+.second_column {
   margin: 50px 0px 0 20px;
   height: 400px;
   width: 300px;
@@ -47,7 +39,7 @@ body {
   border: 1px solid black;
 }
 
-.message-container {
+.message_container {
   width: 100%;
   display: flex;
   align-items: baseline;
@@ -64,4 +56,10 @@ body {
   margin-left: 10px;
   font-family: 'Times New Roman', Times, serif;
   font-size: 18px;
+}
+
+.buttons {
+  width: 300px;
+  display: flex;
+  justify-content: space-around;
 }
