--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -7,6 +7,7 @@
 }
 
 .page {
+  margin-top: 20px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 30px;
 }
@@ -27,4 +28,8 @@
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 20px;
   font-weight: bold;
+}
+
+.button_chat {
+  margin-top: 30px;
 }
